add cart functionality and useMessage hook

--- a/public/styles.css
+++ b/public/styles.css
@@ -29,6 +29,10 @@ main.cart-page {
     text-align: center;
 }
 
+.cart-page > h4 {
+    text-align: center;
+}
+
 .cart-page .total-cost {
     text-align: right;
     font-size: 1.3em;
@@ -130,6 +134,16 @@ header {
 
 a {
     text-decoration: none;
+}
+
+.show {
+    opacity: 1;
+    transition: opacity 0.2s linear;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 5s linear;
 }
 
 a:visited { color: var(--light-blue); }
